--- a/XPTV.yaml
+++ b/XPTV.yaml
@@ -74,7 +74,6 @@ payload:
 - DOMAIN,api.9cec79d.com
 #播放
 - DOMAIN,wjm.kemfsj.com
-
 #囧动漫主页
 - IP-CIDR,43.142.232.217/32,no-resolve
 #播放
@@ -376,8 +375,7 @@ payload:
 #八戒播放
 - DOMAIN-SUFFIX,monidai.com
 - DOMAIN-SUFFIX,hdslb.pro
- 
- #杂七杂八的网站封面
+#杂七杂八的网站封面
 - DOMAIN,img.kuaichezy.net
 - DOMAIN,puui.qpic.cn
 - DOMAIN-SUFFIX,jisuimage.com
@@ -427,7 +425,6 @@ payload:
 - DOMAIN,suboimage.com
 - DOMAIN,img.ffzy888.com
 - DOMAIN,git.886.be
- 
 # MyList
 # 域名后缀匹配
 - DOMAIN-SUFFIX,time.windows.com
@@ -437,7 +434,6 @@ payload:
 - DOMAIN-SUFFIX,dns.msftncsi.com
 - DOMAIN-SUFFIX,ipv6.msftconnecttest.com
 - DOMAIN-SUFFIX,vvz.us.kg
-
 # 域名关键字匹配
 - DOMAIN-KEYWORD,mirror
 - DOMAIN-KEYWORD,ghp
@@ -485,7 +481,6 @@ payload:
 - DOMAIN-KEYWORD,xts.com
 - DOMAIN-KEYWORD,yts.com
 - DOMAIN-KEYWORD,zts.com
-
 # 影视
 - DOMAIN-SUFFIX,cfkj86.com
 - DOMAIN-SUFFIX,blbtgg.com
@@ -495,13 +490,10 @@ payload:
 - DOMAIN-SUFFIX,80yy3.com
 - DOMAIN-SUFFIX,hmrvideo.com
 - DOMAIN-SUFFIX,4k-av.com
-
 #完美
 - DOMAIN-SUFFIX,wmpvp.com
-
 # 极客
 - DOMAIN-SUFFIX,jike.info
-
 # 360
 - DOMAIN-SUFFIX,360.com
 - DOMAIN-SUFFIX,360kuai.com
@@ -511,14 +503,11 @@ payload:
 - DOMAIN-SUFFIX,qhstatic.com
 - DOMAIN-SUFFIX,qhupdate.com
 - DOMAIN-SUFFIX,so.com
-
 #CF
 - DOMAIN-SUFFIX,dot6.ggff.net
-
-# 58
+#58
 - DOMAIN-SUFFIX,58.com
-
-# Alibaba
+#Alibaba
 - DOMAIN-SUFFIX,1688.com
 - DOMAIN-SUFFIX,aliapp.org
 - DOMAIN-SUFFIX,alibaba.com
@@ -556,8 +545,7 @@ payload:
 - DOMAIN-SUFFIX,xiami.net
 - DOMAIN-SUFFIX,ykimg.com
 - DOMAIN-SUFFIX,youku.com
-
-# Baidu
+#Baidu
 - DOMAIN-SUFFIX,baidu.com
 - DOMAIN-SUFFIX,baidubcr.com
 - DOMAIN-SUFFIX,baidupcs.com
@@ -570,8 +558,7 @@ payload:
 - DOMAIN-SUFFIX,hao123img.com
 - DOMAIN-SUFFIX,jomodns.com
 - DOMAIN-SUFFIX,yunjiasu-cdn.net
-
-# Bilibili
+#Bilibili
 - DOMAIN-SUFFIX,acg.tv
 - DOMAIN-SUFFIX,acgvideo.com
 - DOMAIN-SUFFIX,b23.tv
@@ -589,8 +576,7 @@ payload:
 - DOMAIN-SUFFIX,hdslb.com
 - DOMAIN-SUFFIX,im9.com
 - DOMAIN-SUFFIX,smtcdns.net
-
-# ByteDance
+#ByteDance
 - DOMAIN-SUFFIX,amemv.com
 - DOMAIN-SUFFIX,bdxiguaimg.com
 - DOMAIN-SUFFIX,bdxiguastatic.com
@@ -635,14 +621,11 @@ payload:
 - DOMAIN-SUFFIX,zijieimg.com
 - DOMAIN-SUFFIX,zjbyte.com
 - DOMAIN-SUFFIX,zjcdn.com
-
-# CCTV
+#CCTV
 - DOMAIN-SUFFIX,cctv.com
 - DOMAIN-SUFFIX,cctvpic.com
 - DOMAIN-SUFFIX,livechina.com
-
-
-# HuaWei
+#HuaWei
 - DOMAIN-SUFFIX,dbankcdn.com
 - DOMAIN-SUFFIX,hc-cdn.com
 - DOMAIN-SUFFIX,hicloud.com
@@ -653,8 +636,6 @@ payload:
 - DOMAIN-SUFFIX,hwccpc.com
 - DOMAIN-SUFFIX,vmall.com
 - DOMAIN-SUFFIX,vmallres.com
-
-
 # Iqiyi
 - DOMAIN-SUFFIX,71.am
 - DOMAIN-SUFFIX,71edge.com
@@ -664,11 +645,9 @@ payload:
 - DOMAIN-SUFFIX,qiyi.com
 - DOMAIN-SUFFIX,qiyipic.com
 - DOMAIN-SUFFIX,qy.net
-
 # PDD 拼多多
 - DOMAIN-SUFFIX,pinduoduo.com
 - DOMAIN-SUFFIX,yangkeduo.com
-
 # JD
 - DOMAIN-SUFFIX,360buy.com
 - DOMAIN-SUFFIX,360buyimg.com
@@ -678,22 +657,18 @@ payload:
 - DOMAIN-SUFFIX,jdcloud.com
 - DOMAIN-SUFFIX,jdpay.com
 - DOMAIN-SUFFIX,paipai.com
-
 # Kingsoft
 - DOMAIN-SUFFIX,iciba.com
 - DOMAIN-SUFFIX,ksosoft.com
 - DOMAIN-SUFFIX,ksyun.com
-
 # Kuaishou 快手
 - DOMAIN-SUFFIX,kuaishou.com
 - DOMAIN-SUFFIX,yximgs.com
-
 # Meitu
 - DOMAIN-SUFFIX,meitu.com
 - DOMAIN-SUFFIX,meitudata.com
 - DOMAIN-SUFFIX,meitustat.com
 - DOMAIN-SUFFIX,meipai.com
-
 # LeTV 乐视
 - DOMAIN-SUFFIX,le.com
 - DOMAIN-SUFFIX,lecloud.com
@@ -702,12 +677,10 @@ payload:
 - DOMAIN-SUFFIX,letvimg.com
 - DOMAIN-SUFFIX,letvlive.com
 - DOMAIN-SUFFIX,letvstore.com
-
 # MGTV 芒果TV
 - DOMAIN-SUFFIX,hitv.com
 - DOMAIN-SUFFIX,hunantv.com
 - DOMAIN-SUFFIX,mgtv.com
-
 # MI
 - DOMAIN-SUFFIX,duokan.com
 - DOMAIN-SUFFIX,mi-img.com
@@ -716,7 +689,6 @@ payload:
 - DOMAIN-SUFFIX,xiaomi.com
 - DOMAIN-SUFFIX,xiaomi.net
 - DOMAIN-SUFFIX,xiaomicp.com
-
 # NetEase
 - DOMAIN-SUFFIX,126.com
 - DOMAIN-SUFFIX,126.net
@@ -727,12 +699,10 @@ payload:
 - DOMAIN-SUFFIX,netease.com
 - DOMAIN-SUFFIX,ydstatic.com
 - DOMAIN-SUFFIX,youdao.com
-
-# PPTV、PPLive
+#PPTV
 - DOMAIN-SUFFIX,pplive.com
 - DOMAIN-SUFFIX,pptv.com
-
-# Sina
+#Sina
 - DOMAIN-SUFFIX,leju.com
 - DOMAIN-SUFFIX,miaopai.com
 - DOMAIN-SUFFIX,sina.com
@@ -747,8 +717,7 @@ payload:
 - DOMAIN-SUFFIX,weibocdn.com
 - DOMAIN-SUFFIX,weibocdn.cn
 - DOMAIN-SUFFIX,xiaoka.tv
-
-# Sohu Sogo
+#Sohu
 - DOMAIN-SUFFIX,go2map.com
 - DOMAIN-SUFFIX,sogo.com
 - DOMAIN-SUFFIX,sogou.com
@@ -759,15 +728,13 @@ payload:
 - DOMAIN-SUFFIX,sohuno.com
 - DOMAIN-SUFFIX,sohurdc.com
 - DOMAIN-SUFFIX,v-56.com
-
-# Sony
+#Sony
 - DOMAIN-SUFFIX,playstation.com
 - DOMAIN-SUFFIX,playstation.net
 - DOMAIN-SUFFIX,playstationnetwork.com
 - DOMAIN-SUFFIX,sony.com
 - DOMAIN-SUFFIX,sonyentertainmentnetwork.com
-
-# Tencent
+#Tencent
 - DOMAIN-SUFFIX,foxmail.com
 - DOMAIN-SUFFIX,gtimg.com
 - DOMAIN-SUFFIX,idqqimg.com
@@ -790,17 +757,14 @@ payload:
 - DOMAIN-SUFFIX,servicewechat.com
 - DOMAIN-SUFFIX,qlogo.cn
 - DOMAIN-SUFFIX,qpic.cn
-
 # Vip 唯品会
 - DOMAIN-SUFFIX,appsimg.com
 - DOMAIN-SUFFIX,appvipshop.com
 - DOMAIN-SUFFIX,vip.com
 - DOMAIN-SUFFIX,vipstatic.com
-
 # Ximalaya 喜马拉雅
 - DOMAIN-SUFFIX,ximalaya.com
 - DOMAIN-SUFFIX,xmcdn.com
-
 # Xunlei 迅雷
 - DOMAIN-SUFFIX,00cdn.com
 - DOMAIN-SUFFIX,88cdn.com
@@ -810,8 +774,6 @@ payload:
 - DOMAIN-SUFFIX,sandai.net
 - DOMAIN-SUFFIX,thundercdn.com
 - DOMAIN-SUFFIX,xunlei.com
-
-
 # Public Direct CDN 公共直连
 #- DOMAIN-SUFFIX,ajax.aspnetcdn.com
 #- DOMAIN-SUFFIX,ajax.cloudflare.com
@@ -822,10 +784,7 @@ payload:
 - DOMAIN-SUFFIX,jiasule.com
 - DOMAIN-SUFFIX,staticfile.org
 - DOMAIN-SUFFIX,upaiyun.com
-
-
-
-# AccelerateDirectSites
+#AccelerateDirectSites
 - DOMAIN-SUFFIX,10010.com
 - DOMAIN-SUFFIX,115.com
 - DOMAIN-SUFFIX,12306.com
